--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .off {
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    .on {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+}
