--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    
+    .scrollbar::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    .scrollbar::-webkit-scrollbar-track {
+        background   : #ccc;
+        border-radius: 5px;
+    }
+
+    .scrollbar::-webkit-scrollbar-thumb {
+        background   : #666;
+        border-radius: 5px;
+    }
+
+    .scrollbar::-webkit-scrollbar-thumb:hover {
+        background   : #222;
+    }
+    
+}
